# new_graphics_term_project

./: CMakeLists.txt
include/: Camera.h  IndexBuffer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
include/glad/: glad.h
lib/: glad.c
res/shaders/: default.frag  default.vert  light.frag  light.vert
src/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
